@@ -3,6 +3,7 @@
  select the location where built units move.
 -added a possibility to use custom config files. This makes it possible to
  spawn several different bots or servers on the same user account.
+-adding new tiles to Tileset works now in editor
 
 20-Nov-2003 by Matthias Braun
 -removed lots of remaining nonused code handling with UDP networking
